# curvekit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.crates.md  README.md  audit.toml  deny.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
crates/curvekit/: Cargo.toml
crates/curvekit/src/: curve.rs  error.rs  lib.rs
crates/curvekit/src/sources/: bundled.rs  mod.rs  parquet_io.rs
data/: effr-2026.parquet  obfr-2026.parquet  sofr-2026.parquet  treasury-2026.parquet
