[package]
name = "curvekit-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for curvekit — Treasury + SOFR parquet backfill and inspection"
keywords = ["treasury", "sofr", "cli", "finance", "parquet"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "curvekit-cli"
path = "src/main.rs"

[dependencies]
# CLI is a parquet workflow tool (backfill / append / inspect / manifest);
# pin the parquet-loader feature on so the CLI compiles regardless of the
# default-features setting in any consumer workspace.
curvekit = { path = "../crates/curvekit", version = "1.1.0", features = ["parquet-loader"] }

anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
serde_json.workspace = true
